Placed Cloth and Wind
They're both in-game.

--- a/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -124,7 +124,7 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=1914,Y=992)
+LastSize=(X=0,Y=0)
 LastExecutedLaunchDevice=Windows@DRAGON3DINTERAC
 LastExecutedLaunchName=DRAGON3DINTERAC
 LastExecutedPIEPreviewDevice=
@@ -133,7 +133,6 @@ PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 MultipleInstancePositions=(X=0,Y=0)
 NewWindowWidth=1914
 NewWindowHeight=992
-LastExecutedPlayModeType=PlayMode_InEditorFloating
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 FlightCameraControlExperimentalNavigation=False
@@ -176,14 +175,20 @@ MRUItem1=/Game/_Level/DemoMap
 LastLevel=/Game/_Level/Island
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
+RecentAssetEditors=SkeletalMeshEditor
+RecentAssetEditors=PhysicsAssetEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=SkeletalMeshEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=SkeletalMeshEditor
-RecentAssetEditors=AnimationEditor
 RecentAssetEditors=LevelSequenceEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=LevelSequenceEditor
@@ -202,12 +207,6 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=StaticMeshEditor
-RecentAssetEditors=GenericAssetEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=PhysicsAssetEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=StaticMeshEditor
 
 [DetailCategories]
 GeneralProjectSettings.About=True
@@ -1946,6 +1945,31 @@ MaterialExpressionVectorParameter.MaterialExpressionVectorParameter=True
 MaterialExpressionVectorParameter.MaterialExpression=True
 MaterialExpressionVectorParameter.CustomPrimitiveData=True
 MaterialExpressionVectorParameter.ParameterCustomization=True
+AnimationRecordingParameters.Options=True
+SkeletalMeshComponent.SkeletalMesh=True
+SkeletalMeshComponent.Optimization=True
+SkeletalMeshComponent.LOD=True
+SkeletalMeshComponent.MaterialParameters=True
+SkeletalMeshComponent.TextureStreaming=True
+SkeletalMeshComponent.Mobile=True
+SkeletalMeshComponent.RayTracing=True
+SkeletalMeshActor.SkeletalMesh=True
+WindDirectionalSource.Actor=True
+WindDirectionalSource.TransformCommon=True
+WindDirectionalSource.WindDirectionalSourceComponent=True
+WindDirectionalSource.Rendering=True
+WindDirectionalSource.Physics=True
+WindDirectionalSource.Tags=True
+WindDirectionalSource.Activation=True
+WindDirectionalSource.Cooking=True
+WindDirectionalSource.Replication=True
+WindDirectionalSource.Networking=True
+WindDirectionalSourceComponent.TransformCommon=True
+WindDirectionalSourceComponent.WindDirectionalSourceComponent=True
+WindDirectionalSourceComponent.Rendering=True
+WindDirectionalSourceComponent.Tags=True
+WindDirectionalSourceComponent.Activation=True
+WindDirectionalSourceComponent.Cooking=True
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -1961,7 +1985,7 @@ ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
 ContentBrowserDrawer.SelectedPaths=/Game/_Core/_Enemies/Kronen_Male_001
-ContentBrowserDrawer.SelectedPaths=/Game/_Core/_Enemies/Kronen_Bulky
+ContentBrowserDrawer.SelectedPaths=/Game/_Level/_LevelAssets/_Props/Cloth
 None=======
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
@@ -3385,6 +3409,11 @@ None=======
 /Game/_Core/NPCs/The_Old_Man/Textures/Old_Man_001.Old_Man_001=1
 /Game/_Core/NPCs/The_Old_Man/The_Old_Man.The_Old_Man=1
 /Game/_Core/_Enemies/Kronen_Bulky/Enemy_Kronen_Bulk_Death_Anim.Enemy_Kronen_Bulk_Death_Anim=1
+/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Carpenter_Pistol_Reload_Anim.Carpenter_Pistol_Reload_Anim=1
+/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Carpenter_Shotgun_AimWhack_Anim.Carpenter_Shotgun_AimWhack_Anim=1
+/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Carpenter_Rifle_Shoot_Anim_Montage.Carpenter_Rifle_Shoot_Anim_Montage=1
+/Game/_Level/_LevelAssets/_Props/Cloth/Cloth_001.Cloth_001=1
+/Game/_Level/_LevelAssets/_Props/Cloth/Cloth_001_PhysicsAsset.Cloth_001_PhysicsAsset=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -3500,7 +3529,7 @@ K2Node_VariableGet=K2Node_VariableGet.DefaultValueCategory.Mesh,K2Node_VariableG
 BP_Kronen_C=K2Node_VariableGet.DefaultValueCategory.Mesh,K2Node_VariableGet.DefaultValueCategory.Textures,CapsuleComponent.Collision.Collision
 K2Node_CustomEvent=K2Node_VariableGet.DefaultValueCategory.Mesh,K2Node_VariableGet.DefaultValueCategory.Textures
 BP_Slugger1_C=K2Node_VariableGet.DefaultValueCategory.Mesh,K2Node_VariableGet.DefaultValueCategory.Textures
-SkeletalMeshComponent=K2Node_VariableGet.DefaultValueCategory.Mesh,K2Node_VariableGet.DefaultValueCategory.Textures,SkeletalMeshComponent.Collision.Collision
+SkeletalMeshComponent=K2Node_VariableGet.DefaultValueCategory.Mesh,K2Node_VariableGet.DefaultValueCategory.Textures,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup
 BP_Slugger_C=K2Node_VariableGet.DefaultValueCategory.Mesh,K2Node_VariableGet.DefaultValueCategory.Textures
 BP_KronenFemale_C=K2Node_VariableGet.DefaultValueCategory.Mesh,K2Node_VariableGet.DefaultValueCategory.Textures
 BP_Charger_C=K2Node_VariableGet.DefaultValueCategory.Mesh,K2Node_VariableGet.DefaultValueCategory.Textures
@@ -3552,11 +3581,12 @@ StaticMeshActor=K2Node_VariableGet.DefaultValueCategory.Mesh,K2Node_VariableGet.
 K2Node_FunctionEntry=K2Node_VariableGet.DefaultValueCategory.Mesh,K2Node_VariableGet.DefaultValueCategory.Textures
 MagPis_C=K2Node_VariableGet.DefaultValueCategory.Mesh,K2Node_VariableGet.DefaultValueCategory.Textures
 Rifle_C=K2Node_VariableGet.DefaultValueCategory.Mesh,K2Node_VariableGet.DefaultValueCategory.Textures
+WindDirectionalSource=K2Node_VariableGet.DefaultValueCategory.Mesh,K2Node_VariableGet.DefaultValueCategory.Textures,CapsuleComponent.Collision.Collision
 
 [DetailPropertyExpansion]
 RawInputSettings="\"Object.Device Configurations.DeviceConfigurations\" \"Object.Device Configurations.DeviceConfigurations.DeviceConfigurations[0]\" \"Object.Device Configurations.DeviceConfigurations.DeviceConfigurations[0].AxisProperties\" \"Object.Device Configurations.DeviceConfigurations.DeviceConfigurations[0].AxisProperties.AxisProperties[7]\" "
 DeveloperSettings=
-Object="\"Object.SkeletalMeshes\" "
+Object=
 InputMappingContext="\"Object.Mappings.Mappings.Mappings[10]\" \"Object.Mappings.Mappings.Mappings[13]\" \"Object.Mappings.Mappings.Mappings[16]\" \"Object.Mappings.Mappings.Mappings[17]\" \"Object.Mappings.Mappings.Mappings[18]\" \"Object.Mappings.Mappings.Mappings[19]\" \"Object.Mappings.Mappings.Mappings[21]\" "
 DataAsset="\"Object.SkeletalMeshes\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
@@ -3591,38 +3621,45 @@ IF_Character_C=
 StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[3]\" "
 StreamableRenderAsset=
 BlockingVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+SkeletalMeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
+SkinnedMeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
+MeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
+PrimitiveComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
+SceneComponent=
+ActorComponent=
+SkeletalMeshActor="\"Object.SkeletalMeshActor.SkeletalMeshComponent.Object.Collision.BodyInstance\" "
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/_Core/_Enemies/Kronen_Bulky/Enemy_Kronen_Bulk_Idle_Anim
-MRUItem1=/Game/_Core/NPCs/The_Old_Man/The_Old_Man
-MRUItem2=/Game/_Core/NPCs/The_Old_Man/Textures/Old_Man_001
-MRUItem3=/Game/_Core/NPCs/Ferry_Man/Textures/Ferry_Man1
-MRUItem4=/Game/_Core/NPCs/Ferry_Man/Ferry_Man
-MRUItem5=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Carpenter_Shotgun_Shoot_Anim
-MRUItem6=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Shotgun_Shoot
-MRUItem7=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Carpenter_Rifle_Shoot_Anim
-MRUItem8=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Rifle_Shoot
-MRUItem9=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Carpenter_Pistol_Shoot_Anim
-MRUItem10=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Pistol_Shoot
-MRUItem11=/Game/_Core/_Weapons/AmmoToSpawn/_Casings/CasingShotgun
-MRUItem12=/Game/_Core/_Player/_Assets/Carpenter_Char_Skeleton
-MRUItem13=/Game/_Core/_Player/_Assets/Carpenter_Char_SM
-MRUItem14=/Game/_Core/_Player/_PlayerAnimations/_blendSpace/Carp_AnimBP
-MRUItem15=/Game/_Core/_Weapons/AmmoToSpawn/_Casings/CasingAR
-MRUItem16=/Game/_Core/_Weapons/Shotgun
-MRUItem17=/Game/_Core/_Weapons/Rifle
-MRUItem18=/Game/_Core/_Weapons/AmmoToSpawn/_Casings/CasingPis
-MRUItem19=/Game/_Core/_Weapons/AmmoToSpawn/_Mags/MagAR
-MRUItem20=/Game/_Core/_Weapons/AmmoToSpawn/_Mags/MagPis
-MRUItem21=/Game/_Core/_Weapons/AmmoToSpawn/BullitShot
-MRUItem22=/Game/_Core/_Weapons/AmmoToSpawn/BullitPist
-MRUItem23=/Game/_Core/_Weapons/AmmoToSpawn/BullitAr
-MRUItem24=/Game/_PlaceHolderts/bullets/pistol_ammo_shell
-MRUItem25=/Game/_Core/_Player/_Inputs/_IMP/AllMayorKeyInputs
-MRUItem26=/Game/_Core/_Player/_PlayerAnimations/_Animations/Hurt/Carpenter_Death
-MRUItem27=/Game/_Core/_Player/_Assets/Carpenter_Char_PhysicsAsset
-MRUItem28=/Game/_Core/_Player/_PlayerAnimations/_Animations/Axe/Carpenter_Axe_Slash_Anim_Montage
-MRUItem29=/Game/_Level/_LevelAssets/_Environment_Assets/wall/broken_wall_
+MRUItem0=/Game/_Level/_LevelAssets/_Props/Cloth/Cloth_001
+MRUItem1=/Game/_Level/_LevelAssets/_Props/Cloth/Cloth_001_PhysicsAsset
+MRUItem2=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Carpenter_Shotgun_Shoot_Anim
+MRUItem3=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Carpenter_Rifle_Shoot_Anim_Montage
+MRUItem4=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Carpenter_Shotgun_AimWhack_Anim
+MRUItem5=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Carpenter_Pistol_Aim_Anim
+MRUItem6=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Carpenter_Pistol_Reload_Anim
+MRUItem7=/Game/_Core/_Enemies/Kronen_Bulky/Enemy_Kronen_Bulk_Idle_Anim
+MRUItem8=/Game/_Core/NPCs/The_Old_Man/The_Old_Man
+MRUItem9=/Game/_Core/NPCs/The_Old_Man/Textures/Old_Man_001
+MRUItem10=/Game/_Core/NPCs/Ferry_Man/Textures/Ferry_Man1
+MRUItem11=/Game/_Core/NPCs/Ferry_Man/Ferry_Man
+MRUItem12=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Shotgun_Shoot
+MRUItem13=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Carpenter_Rifle_Shoot_Anim
+MRUItem14=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Rifle_Shoot
+MRUItem15=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Carpenter_Pistol_Shoot_Anim
+MRUItem16=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Pistol_Shoot
+MRUItem17=/Game/_Core/_Weapons/AmmoToSpawn/_Casings/CasingShotgun
+MRUItem18=/Game/_Core/_Player/_Assets/Carpenter_Char_Skeleton
+MRUItem19=/Game/_Core/_Player/_Assets/Carpenter_Char_SM
+MRUItem20=/Game/_Core/_Player/_PlayerAnimations/_blendSpace/Carp_AnimBP
+MRUItem21=/Game/_Core/_Weapons/AmmoToSpawn/_Casings/CasingAR
+MRUItem22=/Game/_Core/_Weapons/Shotgun
+MRUItem23=/Game/_Core/_Weapons/Rifle
+MRUItem24=/Game/_Core/_Weapons/AmmoToSpawn/_Casings/CasingPis
+MRUItem25=/Game/_Core/_Weapons/AmmoToSpawn/_Mags/MagAR
+MRUItem26=/Game/_Core/_Weapons/AmmoToSpawn/_Mags/MagPis
+MRUItem27=/Game/_Core/_Weapons/AmmoToSpawn/BullitShot
+MRUItem28=/Game/_Core/_Weapons/AmmoToSpawn/BullitPist
+MRUItem29=/Game/_Core/_Weapons/AmmoToSpawn/BullitAr
 
 [MessageLog]
 LastLogListing=FBXImport
@@ -3705,6 +3742,8 @@ bAutoExpandNodesOnSelection=True
 TreeViewWidth=0.300000
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.WindDirectionalSource;
+RecentlyPlaced=/Game/_Level/_LevelAssets/_Props/Cloth/Cloth_001.Cloth_001;
 RecentlyPlaced=/Game/_Core/_Weapons/AR_rifle/Weapon_Rifle_SkelMesh.Weapon_Rifle_SkelMesh;
 RecentlyPlaced=/Game/_Core/_Player/_Assets/Carpenter_Char_SM.Carpenter_Char_SM;
 RecentlyPlaced=/Game/_Core/_Weapons/Rifle.Rifle;
@@ -3723,8 +3762,6 @@ RecentlyPlaced=/Game/_Core/_Enemies/BP_KronenFast.BP_KronenFast;
 RecentlyPlaced=/Game/_Core/_Enemies/_Charger/Enemy_Charger_Skeleton.Enemy_Charger_Skeleton;
 RecentlyPlaced=/Game/_Core/_Enemies/BP_Slugger.BP_Slugger;
 RecentlyPlaced=/Game/_Core/_Enemies/BP_KronenFemale.BP_KronenFemale;
-RecentlyPlaced=/Game/_Core/_Weapons/Sig_Sauer/Weapon_Pistol.Weapon_Pistol;
-RecentlyPlaced=/Game/_Core/_Weapons/AR_rifle/Weapon_Rifle.Weapon_Rifle;
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
