--- a/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -124,7 +124,7 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=0,Y=0)
+LastSize=(X=1914,Y=992)
 LastExecutedLaunchDevice=Windows@DRAGON3DINTERAC
 LastExecutedLaunchName=DRAGON3DINTERAC
 LastExecutedPIEPreviewDevice=
@@ -177,7 +177,7 @@ MRUItem1=/Game/_Level/DemoMap
 LastLevel=/Game/_Level/Island
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
 RecentAssetEditors=TextureEditor
 RecentAssetEditors=TextureEditor
@@ -209,6 +209,7 @@ RecentAssetEditors=LevelSequenceEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=LevelSequenceEditor
 RecentAssetEditors=AnimationEditor
+OpenAssetsAtExit=/Game/_Core/_Player/IF_Character.IF_Character
 
 [DetailCategories]
 GeneralProjectSettings.About=True
@@ -846,6 +847,7 @@ Landscape.Input=True
 Landscape.Actor=True
 Texture2D.LevelOfDetail=True
 Texture2D.Compression=True
+Texture2D.Interchange=True
 Texture2D.Interchange=True
 Texture2D.Interchange=True
 Texture2D.Texture=True
@@ -1972,7 +1974,6 @@ WindDirectionalSourceComponent.Rendering=True
 WindDirectionalSourceComponent.Tags=True
 WindDirectionalSourceComponent.Activation=True
 WindDirectionalSourceComponent.Cooking=True
-Texture2D.Interchange =True
 MaterialExpressionTextureCoordinate.MaterialExpressionTextureCoordinate=True
 MaterialExpressionTextureCoordinate.MaterialExpression=True
 MaterialExpressionWorldPosition.UMaterialExpressionWorldPosition=True
@@ -2025,7 +2026,7 @@ ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
 ContentBrowserDrawer.SelectedPaths=/Game/_Core/_Enemies/Kronen_Male_001
-ContentBrowserDrawer.SelectedPaths=/
+ContentBrowserDrawer.SelectedPaths=/Engine
 None=======
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
@@ -3600,9 +3601,9 @@ NavMeshBoundsVolume=K2Node_VariableGet.DefaultValueCategory.Mesh,K2Node_Variable
 SphereComponent=
 EnnemySpawner_C=K2Node_VariableGet.DefaultValueCategory.Mesh,K2Node_VariableGet.DefaultValueCategory.Textures
 ArrowComponent=K2Node_VariableGet.DefaultValueCategory.Mesh,K2Node_VariableGet.DefaultValueCategory.Textures
-PropertyWrapper=K2Node_VariableGet.DefaultValueCategory.Mesh,K2Node_VariableGet.DefaultValueCategory.Textures
+PropertyWrapper=K2Node_VariableGet.DefaultValueCategory.Mesh,K2Node_VariableGet.DefaultValueCategory.Textures,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup
 Random_ESpanwer_C=K2Node_VariableGet.DefaultValueCategory.Mesh,K2Node_VariableGet.DefaultValueCategory.Textures
-IF_Character_C=K2Node_VariableGet.DefaultValueCategory.Mesh,K2Node_VariableGet.DefaultValueCategory.Textures
+IF_Character_C=K2Node_VariableGet.DefaultValueCategory.Mesh,K2Node_VariableGet.DefaultValueCategory.Textures,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup
 Invetory_C=
 K2Node_VariableSet=K2Node_VariableGet.DefaultValueCategory.Mesh,K2Node_VariableGet.DefaultValueCategory.Textures
 K2Node_Tunnel=K2Node_VariableGet.DefaultValueCategory.Mesh,K2Node_VariableGet.DefaultValueCategory.Textures
@@ -3673,45 +3674,45 @@ IF_Character_C=
 StaticMesh=
 StreamableRenderAsset=
 BlockingVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-SkeletalMeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
-SkinnedMeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
-MeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
-PrimitiveComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
+SkeletalMeshComponent=
+SkinnedMeshComponent=
+MeshComponent=
+PrimitiveComponent=
 SceneComponent=
 ActorComponent=
 SkeletalMeshActor="\"Object.SkeletalMeshActor.SkeletalMeshComponent.Object.Collision.BodyInstance\" "
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/_Level/_LevelAssets/_Props/_Materials/Ice_Machine2_Texture
-MRUItem1=/Game/_Level/_LevelAssets/_Props/_Materials/Ice_Machine1_Texture
-MRUItem2=/Game/_Level/_LevelAssets/_Props/_Materials/Ice_Machine2_Mat
-MRUItem3=/Game/_Level/_LevelAssets/_Props/_Materials/Ice_Machine1_Mat
-MRUItem4=/Game/_PlaceHolderts/OG_Textures/disgusting_flesh_material
-MRUItem5=/Game/_Level/_LevelAssets/_OGFiles/skin_nasty_version2_M
-MRUItem6=/Game/_Level/_LevelAssets/_OGFiles/Skin_nasty_M
-MRUItem7=/Game/_Level/_LevelAssets/_Environment_Assets/Catwalk/BackPanel_AlbedoTransparency
-MRUItem8=/Game/_Level/_LevelAssets/_Environment_Assets/Catwalk/BackPanel_M
-MRUItem9=/Game/_Level/_LevelAssets/_Props/_Materials/Newspaper_Dispenser_1_Mat
-MRUItem10=/Game/_Level/_LevelAssets/_Props/_Materials/Hydrant_Mat
-MRUItem11=/Game/_Level/_LevelAssets/_Props/_Materials/whiskey
-MRUItem12=/Game/_Level/_LevelAssets/_Props/_Outside/cardboardBox_SM
-MRUItem13=/Game/_Level/_LevelAssets/_Props/_Outside/Fire_Hydrant
-MRUItem14=/Game/_Level/_LevelAssets/_Props/Cloth/Cloth_001
-MRUItem15=/Game/_Level/_LevelAssets/_Props/Cloth/Cloth_001_PhysicsAsset
-MRUItem16=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Carpenter_Shotgun_Shoot_Anim
-MRUItem17=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Carpenter_Rifle_Shoot_Anim_Montage
-MRUItem18=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Carpenter_Shotgun_AimWhack_Anim
-MRUItem19=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Carpenter_Pistol_Aim_Anim
-MRUItem20=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Carpenter_Pistol_Reload_Anim
-MRUItem21=/Game/_Core/_Enemies/Kronen_Bulky/Enemy_Kronen_Bulk_Idle_Anim
-MRUItem22=/Game/_Core/NPCs/The_Old_Man/The_Old_Man
-MRUItem23=/Game/_Core/NPCs/The_Old_Man/Textures/Old_Man_001
-MRUItem24=/Game/_Core/NPCs/Ferry_Man/Textures/Ferry_Man1
-MRUItem25=/Game/_Core/NPCs/Ferry_Man/Ferry_Man
-MRUItem26=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Shotgun_Shoot
-MRUItem27=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Carpenter_Rifle_Shoot_Anim
-MRUItem28=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Rifle_Shoot
-MRUItem29=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Carpenter_Pistol_Shoot_Anim
+MRUItem0=/Game/_Core/_Player/IF_Character
+MRUItem1=/Game/_Level/_LevelAssets/_Props/_Materials/Ice_Machine2_Texture
+MRUItem2=/Game/_Level/_LevelAssets/_Props/_Materials/Ice_Machine1_Texture
+MRUItem3=/Game/_Level/_LevelAssets/_Props/_Materials/Ice_Machine2_Mat
+MRUItem4=/Game/_Level/_LevelAssets/_Props/_Materials/Ice_Machine1_Mat
+MRUItem5=/Game/_PlaceHolderts/OG_Textures/disgusting_flesh_material
+MRUItem6=/Game/_Level/_LevelAssets/_OGFiles/skin_nasty_version2_M
+MRUItem7=/Game/_Level/_LevelAssets/_OGFiles/Skin_nasty_M
+MRUItem8=/Game/_Level/_LevelAssets/_Environment_Assets/Catwalk/BackPanel_AlbedoTransparency
+MRUItem9=/Game/_Level/_LevelAssets/_Environment_Assets/Catwalk/BackPanel_M
+MRUItem10=/Game/_Level/_LevelAssets/_Props/_Materials/Newspaper_Dispenser_1_Mat
+MRUItem11=/Game/_Level/_LevelAssets/_Props/_Materials/Hydrant_Mat
+MRUItem12=/Game/_Level/_LevelAssets/_Props/_Materials/whiskey
+MRUItem13=/Game/_Level/_LevelAssets/_Props/_Outside/cardboardBox_SM
+MRUItem14=/Game/_Level/_LevelAssets/_Props/_Outside/Fire_Hydrant
+MRUItem15=/Game/_Level/_LevelAssets/_Props/Cloth/Cloth_001
+MRUItem16=/Game/_Level/_LevelAssets/_Props/Cloth/Cloth_001_PhysicsAsset
+MRUItem17=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Carpenter_Shotgun_Shoot_Anim
+MRUItem18=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Carpenter_Rifle_Shoot_Anim_Montage
+MRUItem19=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Carpenter_Shotgun_AimWhack_Anim
+MRUItem20=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Carpenter_Pistol_Aim_Anim
+MRUItem21=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Carpenter_Pistol_Reload_Anim
+MRUItem22=/Game/_Core/_Enemies/Kronen_Bulky/Enemy_Kronen_Bulk_Idle_Anim
+MRUItem23=/Game/_Core/NPCs/The_Old_Man/The_Old_Man
+MRUItem24=/Game/_Core/NPCs/The_Old_Man/Textures/Old_Man_001
+MRUItem25=/Game/_Core/NPCs/Ferry_Man/Textures/Ferry_Man1
+MRUItem26=/Game/_Core/NPCs/Ferry_Man/Ferry_Man
+MRUItem27=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Shotgun_Shoot
+MRUItem28=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Carpenter_Rifle_Shoot_Anim
+MRUItem29=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Rifle_Shoot
 
 [MessageLog]
 LastLogListing=FBXImport
